# ANSI-C-Book

./: .gitignore  CHARS.C  CMakeLists.txt  HELLO.C  READ.C  README.md  TEMP.C  TYPES.C  WC.C
dados/: a.txt  hobbit.txt  miserabs.txt
src/: ASCI.C  ASCI.c  BREAK.C  BREAK.c  CHARS.C  CHARS.c  CLOSURE.C  CLOSURE.c  CPU.c  HELLO.C  HELLO.c  HISTWORD.C  LIMITS.C  LINES.C  PAD.CPP  READ.c  TEMP.C  TYPES.C  UNION.C  UNION1.C  WC.c  WORDS.C  closure.c  cpu.c
